# GameEngine

./: CMakeLists.txt
shaders/: cube.frag  cube.vert  quad.frag  quad.vert  triangle.frag  triangle.vert
src/: main.cpp
src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
src/GameObject/: GameObject.h
src/Renderer/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Transform/: Transform.h
